# vis_stream

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json
cmake/: config.cmake.in  uninstall.cmake.in
cpp_backend/: CMakeLists.txt
cpp_backend/include/: vis_primitives.h  vis_stream.h
cpp_backend/src/: main.cpp  typed_window.h  visualization_server.cpp  window_2d.cpp  window_2d.h  window_3d.cpp  window_3d.h  window_base.h
document/: design.md
examples/basic_usage/: CMakeLists.txt  basic_geometries_demo.cpp  complex_animations_demo.cpp  main_2d.cpp  main_3d.cpp  object_management_demo.cpp  window_management_demo.cpp
protocol/: test_message.proto  visualization.proto
web_client/: index.html  install.sh  server_applet.py  uninstall.sh  vis-server.desktop.template
web_client/css/: style.css
web_client/js/: main.js
web_client/js/lib/: Line2.js  LineGeometry.js  LineMaterial.js  LineSegments2.js  LineSegmentsGeometry.js  OrbitControls.js  google-protobuf.js  three.module.js
web_client/js/lib/protocol/: visualization_proto.js
